crates/webfang_core/tests/snapshots/max_tokens_bound_test__max_tokens_non_numeric_fails_closed_stderr.snap
---
source: crates/webfang_core/tests/max_tokens_bound_test.rs
expression: redacted
---
error: invalid value 'banana' for '--max-tokens <MAX_TOKENS>': `banana` no es un número entero válido

For more information, try '--help'.

Error: invalid arguments
